Implemented categories for all rounds